fix(time-select): don't let time buttons text wrap

--- a/components/time-select/time-select.module.scss
+++ b/components/time-select/time-select.module.scss
@@ -114,6 +114,10 @@
           width: 100%;
           margin-bottom: 8px;
 
+          span {
+            white-space: nowrap;
+          }
+
           &:last-of-type {
             margin-bottom: 16px;
           }
